--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "18.x"
+    "node": ">=12.18.3",
+    "npm": ">=6.14.6"
   },
   "scripts": {
     "start": "node index.js",
@@ -12,10 +13,6 @@
   },
   "author": "Henry",
   "license": "ISC",
-  "engines": {
-    "node": ">=12.18.3",
-    "npm": ">=6.14.6"
-  },
   "dependencies": {
     "axios": "^1.1.2",
     "body-parser": "^1.19.0",
@@ -23,9 +20,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "morgan": "^1.10.0",
-    "pg": "^8.5.1",
     "nodemon": "^2.0.20",
+    "package": "^1.0.1",
+    "pg": "^8.8.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
