--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^2.1.4"
